# cxx-test

./: .travis.yml  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/calculator/: Calculator.h  Value.h
src/: CMakeLists.txt  Calculator.cpp  Value.cpp  main.cpp
tests/: CMakeLists.txt  CalculatorTest.cpp
